--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:pull": "prisma db pull",
-    "db:migrate": "prisma migrate dev",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:prod": "npx prisma migrate deploy",
     "db:studio": "prisma studio"
   },
   "dependencies": {
@@ -56,7 +57,6 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
-    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
